[package]
name    = "editor"
version = "0.1.0"
edition = "2021"
publish = false

# -----------------------------------------------------------------------------
# Web stack & async runtime
# -----------------------------------------------------------------------------
[dependencies]
# — axum stack —
axum         = { version = "0.7.9", features = ["macros", "tokio", "json"] }
axum-macros  = "0.4"
tower        = { version = "0.4", features = ["util"] }
tower-http   = { version = "0.5", features = ["fs", "trace", "compression-full", "cors", "set-status"] }

# — async runtime & helpers —
tokio        = { version = "1.38", features = ["full"] }
tokio-util   = { version = "0.7",  features = ["rt", "io"] }   # “io” for ReaderStream

# — logging / data / domain —
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
anyhow               = "1"
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
zen-engine           = "0.37.1"

# — new crates introduced by the file-service / revision API —
base64        = "0.21"
walkdir       = "2.4"
zip           = { version = "0.6", default-features = false, features = ["deflate"] }
